--- a/app/src/main/res/layout/view_order_cemetery_build.xml
+++ b/app/src/main/res/layout/view_order_cemetery_build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -25,4 +25,8 @@
             android:scrollbars="none" />
     </android.support.v4.widget.SwipeRefreshLayout>
 
-</LinearLayout>
+    <com.shian.shianlife.view.popupbutton.PopupButton
+        android:id="@+id/popupbutton"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></com.shian.shianlife.view.popupbutton.PopupButton>
+</RelativeLayout>
