--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="MyViewAttr">
+        <attr name="ems" format="integer"/>
         <attr name="titleName" format="string" />
         <attr name="isImportant" format="boolean" />
         <attr name="inputType" format="integer" />
