--- a/app/src/main/res/layout/view_order_cemetery_build.xml
+++ b/app/src/main/res/layout/view_order_cemetery_build.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/zhy_text_color_3"
     android:orientation="vertical">
 
 
@@ -9,8 +10,7 @@
         android:id="@+id/sryt_swipe_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/dimen_16dp"
-        android:layout_marginRight="@dimen/dimen_16dp"
+
         android:scrollbars="none">
 
         <ListView
