--- a/app/src/main/res/layout/view_main_dynamic_layout_items.xml
+++ b/app/src/main/res/layout/view_main_dynamic_layout_items.xml
@@ -13,21 +13,21 @@
         android:textSize="@dimen/dimen_24dp" />
 
     <TextView
-        android:layout_marginLeft="@dimen/dimen_75dp"
         android:id="@+id/tv_content"
         android:layout_width="@dimen/dimen_0dp"
-        android:layout_weight="1"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginRight="@dimen/dimen_16dp"
+        android:layout_marginLeft="@dimen/dimen_50dp"
+        android:layout_weight="1"
         android:textSize="@dimen/dimen_24dp" />
 
     <TextView
         android:id="@+id/tv_top"
-        android:text="【置顶】"
-        android:layout_marginRight="@dimen/dimen_32dp"
-        android:textColor="@color/zhy_text_color_7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="center_vertical|right"
+        android:text="【置顶】"
+        android:textColor="@color/zhy_text_color_7"
         android:textSize="@dimen/dimen_24dp" />
 </LinearLayout>
