--- a/app/src/main/res/layout/view_maindynamic_layout.xml
+++ b/app/src/main/res/layout/view_maindynamic_layout.xml
@@ -24,6 +24,7 @@
             android:id="@+id/listView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/dimen_15dp"
             android:scrollbars="none"></com.shian.shianlife.view.ScrollListView>
 
 
