--- a/app/src/main/res/layout/zhy_write_spinnercemeterylocation.xml
+++ b/app/src/main/res/layout/zhy_write_spinnercemeterylocation.xml
@@ -18,15 +18,30 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_80dp"
+            android:layout_height="wrap_content"
             android:background="@color/zhy_backgroud_1"
-            android:gravity="center_vertical"
-            android:paddingLeft="@dimen/dimen_32dp"
-            android:text="园区名称"
-            android:textColor="@color/dimgray"
-            android:textSize="@dimen/dimen_28dp" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/dimen_80dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:paddingLeft="@dimen/dimen_32dp"
+                android:text="园区名称"
+                android:textColor="@color/dimgray"
+                android:textSize="@dimen/dimen_28dp" />
+
+            <ImageView
+                android:id="@+id/iv_details"
+                android:layout_width="@dimen/dimen_50dp"
+                android:layout_height="@dimen/dimen_50dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="@dimen/dimen_32dp"
+                android:src="@drawable/tishi" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
