--- a/app/src/main/res/layout/zhy_write_spinnerview_normal.xml
+++ b/app/src/main/res/layout/zhy_write_spinnerview_normal.xml
@@ -50,4 +50,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/tv_mask2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
 </RelativeLayout>
