--- a/app/src/main/res/layout/layout_find_items.xml
+++ b/app/src/main/res/layout/layout_find_items.xml
@@ -9,8 +9,8 @@
     <ImageView
         android:id="@+id/iv_pic"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="fitCenter"
+        android:layout_height="@dimen/dimen_480dp"
+        android:scaleType="fitXY"
         android:adjustViewBounds="true"
         android:src="@drawable/zhy_find_default_icon" />
 
