--- a/app/src/main/res/layout/item_cemetery_build_list.xml
+++ b/app/src/main/res/layout/item_cemetery_build_list.xml
@@ -226,6 +226,19 @@
                 android:text="订单详情"
                 android:textColor="@color/zhy_title_color_1"
                 android:textSize="@dimen/dimen_24dp" />
+
+            <TextView
+                android:id="@+id/tv_car"
+                android:layout_width="@dimen/dimen_132dp"
+                android:layout_height="@dimen/dimen_66dp"
+                android:layout_marginBottom="@dimen/dimen_24dp"
+                android:layout_marginLeft="@dimen/dimen_24dp"
+                android:layout_marginTop="@dimen/dimen_24dp"
+                android:background="@drawable/zhy_button_state_5"
+                android:gravity="center"
+                android:text="申请用车"
+                android:textColor="@color/white"
+                android:textSize="@dimen/dimen_24dp" />
         </LinearLayout>
 
 
