--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -171,11 +171,13 @@
         <item name="android:textSize">@dimen/dimen_32dp</item>
         <item name="android:textColor">@color/black_item_shua_textcolor</item>
     </style>
+
     <style name="zhy_text_contract_3">
         <item name="android:textSize">@dimen/dimen_24dp</item>
         <item name="android:textColor">@color/black_item_shua_textcolor</item>
 
     </style>
+
     <style name="zhy_radingbar_style_1" parent="@android:style/Widget.RatingBar">
         <!-- 定义星星图片 -->
         <item name="android:progressDrawable">@drawable/zhy_ratingbar_style</item>
@@ -183,5 +185,16 @@
         <item name="android:numColumns">5</item>
         <item name="android:minHeight">@dimen/dimen_60dp</item>
         <item name="android:maxHeight">@dimen/dimen_60dp</item>
+    </style>
+
+    <style name="zhy_drawer_item_icon">
+        <item name="android:layout_gravity">center_vertical</item>
+    </style>
+
+    <style name="zhy_drawer_item_text">
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:layout_marginLeft">@dimen/dimen_36dp</item>
+        <item name="android:textSize">@dimen/dimen_32dp</item>
+        <item name="android:textColor">@color/dimgray</item>
     </style>
 </resources>
