--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -57,8 +57,10 @@
     <color name="zhy_text_color_10">#ffa592</color>
     <color name="zhy_text_color_11">#6e6e6e</color>
     <color name="zhy_text_color_12">#929191</color>
+    <color name="zhy_text_color_13">#222222</color>
     <color name="zhy_title_color_1">#3baf92</color>
     <color name="zhy_rb_check_1">#ededed</color>
+    <color name="zhy_rb_check_transparent">#00ffffff</color>
     <color name="zhy_rb_uncheck_1">#dedede</color>
     <color name="zhy_backgroud_1">#F1F6F5</color>
     <!-- Dialog Color -->
