--- a/app/src/main/res/layout/view_head.xml
+++ b/app/src/main/res/layout/view_head.xml
@@ -8,12 +8,12 @@
     android:padding="@dimen/dimen_20dp">
 
     <!--<ImageView-->
-        <!--android:id="@+id/logo"-->
-        <!--android:layout_width="@dimen/dimen_50dp"-->
-        <!--android:layout_height="@dimen/dimen_50dp"-->
-        <!--android:layout_alignBottom="@+id/tv_head_left"-->
-        <!--android:layout_centerVertical="true"-->
-        <!--android:src="@drawable/logo" />-->
+    <!--android:id="@+id/logo"-->
+    <!--android:layout_width="@dimen/dimen_50dp"-->
+    <!--android:layout_height="@dimen/dimen_50dp"-->
+    <!--android:layout_alignBottom="@+id/tv_head_left"-->
+    <!--android:layout_centerVertical="true"-->
+    <!--android:src="@drawable/logo" />-->
     <!--android:drawableLeft="@drawable/ic_home_location"-->
 
     <TextView
@@ -26,14 +26,13 @@
 
     <ImageView
         android:id="@+id/iv_head_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_width="@dimen/dimen_64dp"
+        android:layout_height="@dimen/dimen_64dp"
+        android:layout_centerVertical="true"
         android:layout_gravity="center"
-        android:background="@drawable/logo"
+        android:background="@drawable/zhy_user_icon"
         android:textColor="@color/white"
-        android:textSize="@dimen/dimen_40dp"
-        android:visibility="gone" />
+        android:textSize="@dimen/dimen_40dp" />
 
     <TextView
         android:id="@+id/title_location"
@@ -73,16 +72,16 @@
         android:background="@drawable/ic_new_message" />
 
     <!--<TextView-->
-        <!--android:id="@+id/tv_head_left"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignBottom="@+id/title_location"-->
-        <!--android:layout_marginLeft="@dimen/dimen_10dp"-->
-        <!--android:layout_toEndOf="@+id/logo"-->
-        <!--android:layout_toRightOf="@+id/logo"-->
-        <!--android:gravity="center"-->
-        <!--android:text="成都"-->
-        <!--android:textColor="@color/white"-->
-        <!--android:textSize="@dimen/dimen_21dp" />-->
+    <!--android:id="@+id/tv_head_left"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignBottom="@+id/title_location"-->
+    <!--android:layout_marginLeft="@dimen/dimen_10dp"-->
+    <!--android:layout_toEndOf="@+id/logo"-->
+    <!--android:layout_toRightOf="@+id/logo"-->
+    <!--android:gravity="center"-->
+    <!--android:text="成都"-->
+    <!--android:textColor="@color/white"-->
+    <!--android:textSize="@dimen/dimen_21dp" />-->
 
 </RelativeLayout>
