--- a/app/src/main/res/layout/view_userinfo_layout.xml
+++ b/app/src/main/res/layout/view_userinfo_layout.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    android:orientation="vertical">
+    android:layout_height="@dimen/dimen_400dp">
+
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="@dimen/dimen_32dp">
+        android:layout_height="@dimen/dimen_200dp"
+        android:background="@color/zhy_text_color_1"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/iv_user_pic"
             android:layout_width="@dimen/dimen_132dp"
             android:layout_height="@dimen/dimen_132dp"
-            android:src="@drawable/zhy_userinfo_icon" />
+            android:src="@drawable/zhy_userinfo_icon"
+            android:visibility="gone" />
 
         <LinearLayout
             android:layout_width="@dimen/dimen_0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dimen_32dp"
+            android:layout_marginTop="@dimen/dimen_28dp"
             android:layout_weight="1"
             android:orientation="vertical">
 
@@ -29,14 +30,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
-                android:textSize="@dimen/dimen_32dp" />
+                android:textColor="@color/white"
+                android:textSize="@dimen/dimen_40dp" />
 
             <TextView
                 android:id="@+id/tv_status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_8dp"
+                android:layout_marginTop="@dimen/dimen_16dp"
                 android:text=""
+                android:textColor="@color/white"
                 android:textSize="@dimen/dimen_24dp" />
         </LinearLayout>
 
@@ -47,15 +50,15 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:visibility="gone">
 
                 <ImageView
-                    android:layout_marginTop="@dimen/dimen_10dp"
                     android:layout_width="@dimen/dimen_25dp"
                     android:layout_height="@dimen/dimen_28dp"
                     android:layout_marginRight="@dimen/dimen_8dp"
+                    android:layout_marginTop="@dimen/dimen_10dp"
                     android:src="@drawable/zhy_main_score_icon" />
 
                 <TextView
@@ -64,7 +67,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="top"
                     android:text="0.0"
-                    android:textColor="@color/zhy_text_color_4"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/dimen_40dp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -72,8 +75,9 @@
             <LinearLayout
                 android:id="@+id/ll_sign"
                 android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/dimen_32dp"
+                android:layout_marginTop="@dimen/dimen_64dp"
                 android:gravity="bottom"
                 android:orientation="horizontal">
 
@@ -82,7 +86,8 @@
                     android:layout_width="@dimen/dimen_46dp"
                     android:layout_height="@dimen/dimen_40dp"
                     android:layout_marginRight="@dimen/dimen_8dp"
-                    android:src="@drawable/zhy_main_sign_uncheck" />
+                    android:src="@drawable/zhy_main_sign_uncheck"
+                    android:tint="@color/white" />
 
                 <TextView
                     android:id="@+id/tv_sign_name"
@@ -90,7 +95,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="top"
                     android:text="签到"
-                    android:textColor="@color/zhy_text_color_1"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/dimen_24dp" />
             </LinearLayout>
         </LinearLayout>
@@ -98,43 +103,141 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_1dp"
-        android:background="@color/zhy_line_3" />
+        android:layout_height="@dimen/dimen_233dp"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/zhy_shadow_back" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/dimen_233dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/dimen_16dp"
+        android:layout_marginLeft="@dimen/dimen_16dp"
+        android:layout_marginRight="@dimen/dimen_16dp"
+        android:background="@drawable/zhy_button_state_item_white"
         android:orientation="horizontal">
 
-        <com.shian.shianlife.view.customview.UserInfoPointLayout
-            android:id="@+id/pointlayout_integral"
+        <!--<com.shian.shianlife.view.customview.UserInfoPointLayout-->
+        <!--android:id="@+id/pointlayout_integral"-->
+        <!--android:layout_width="@dimen/dimen_0dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_weight="1"></com.shian.shianlife.view.customview.UserInfoPointLayout>-->
+
+        <!--<TextView-->
+        <!--android:layout_width="@dimen/dimen_1dp"-->
+        <!--android:layout_height="@dimen/dimen_66dp"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:background="@color/zhy_line_3" />-->
+
+        <!--<com.shian.shianlife.view.customview.UserInfoPointLayout-->
+        <!--android:id="@+id/pointlayout_money"-->
+        <!--android:layout_width="@dimen/dimen_0dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_weight="1"></com.shian.shianlife.view.customview.UserInfoPointLayout>-->
+
+        <!--<TextView-->
+        <!--android:layout_width="@dimen/dimen_1dp"-->
+        <!--android:layout_height="@dimen/dimen_66dp"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:background="@color/zhy_line_3" />-->
+
+        <!--<com.shian.shianlife.view.customview.UserInfoPointLayout-->
+        <!--android:id="@+id/pointlayout_order"-->
+        <!--android:layout_width="@dimen/dimen_0dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_weight="1"></com.shian.shianlife.view.customview.UserInfoPointLayout>-->
+        <LinearLayout
+            android:id="@+id/ll_money"
             android:layout_width="@dimen/dimen_0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"></com.shian.shianlife.view.customview.UserInfoPointLayout>
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/dimen_16dp"
+                android:text="钱包"
+                android:textColor="@color/dimgray"
+                android:textSize="@dimen/dimen_24dp" />
+
+            <TextView
+                android:id="@+id/tv_money"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dimen_16dp"
+                android:text="0"
+                android:textColor="@color/zhy_text_color_1"
+                android:textSize="@dimen/dimen_72dp" />
+        </LinearLayout>
 
         <TextView
             android:layout_width="@dimen/dimen_1dp"
-            android:layout_height="@dimen/dimen_66dp"
-            android:layout_gravity="center"
-            android:background="@color/zhy_line_3" />
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/dimen_48dp"
+            android:layout_marginTop="@dimen/dimen_48dp"
+            android:background="@color/zhy_text_color_2" />
 
-        <com.shian.shianlife.view.customview.UserInfoPointLayout
-            android:id="@+id/pointlayout_money"
+        <LinearLayout
+            android:id="@+id/ll_integral"
             android:layout_width="@dimen/dimen_0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"></com.shian.shianlife.view.customview.UserInfoPointLayout>
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/dimen_16dp"
+                android:text="积分"
+                android:textColor="@color/dimgray"
+                android:textSize="@dimen/dimen_24dp" />
+
+            <TextView
+                android:id="@+id/tv_integral"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dimen_16dp"
+                android:text="0"
+                android:textColor="@color/zhy_text_color_1"
+                android:textSize="@dimen/dimen_72dp" />
+        </LinearLayout>
 
         <TextView
             android:layout_width="@dimen/dimen_1dp"
-            android:layout_height="@dimen/dimen_66dp"
-            android:layout_gravity="center"
-            android:background="@color/zhy_line_3" />
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/dimen_48dp"
+            android:layout_marginTop="@dimen/dimen_48dp"
+            android:background="@color/zhy_text_color_2" />
 
-        <com.shian.shianlife.view.customview.UserInfoPointLayout
-            android:id="@+id/pointlayout_order"
+        <LinearLayout
+            android:id="@+id/ll_order_num"
             android:layout_width="@dimen/dimen_0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"></com.shian.shianlife.view.customview.UserInfoPointLayout>
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/dimen_16dp"
+                android:text="服务单"
+                android:textColor="@color/dimgray"
+                android:textSize="@dimen/dimen_24dp" />
+
+            <TextView
+                android:id="@+id/tv_order_num"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dimen_16dp"
+                android:text="0"
+                android:textColor="@color/zhy_text_color_1"
+                android:textSize="@dimen/dimen_72dp" />
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+
+
+</RelativeLayout>
