--- a/app/src/main/res/drawable/zhy_item_state_white_check.xml
+++ b/app/src/main/res/drawable/zhy_item_state_white_check.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#fafafa"></solid>
-    <padding
-        android:bottom="@dimen/dimen_5dp"
-        android:left="@dimen/dimen_5dp"
-        android:right="@dimen/dimen_5dp"
-        android:top="@dimen/dimen_5dp"></padding>
+    <size
+        android:width="@dimen/dimen_80dp"
+        android:height="@dimen/dimen_80dp"></size>
     <corners android:radius="@dimen/dimen_5dp"></corners>
 </shape>
