--- a/app/src/main/res/layout/view_order_qt.xml
+++ b/app/src/main/res/layout/view_order_qt.xml
@@ -78,5 +78,6 @@
     <com.shian.shianlife.view.popupbutton.PopupButton
         android:id="@+id/popupbutton"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></com.shian.shianlife.view.popupbutton.PopupButton>
+        android:layout_height="match_parent"
+        android:visibility="gone"></com.shian.shianlife.view.popupbutton.PopupButton>
 </RelativeLayout>
