商品搜索框制作

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -59,6 +59,8 @@
     <color name="zhy_text_color_12">#929191</color>
     <color name="zhy_text_color_13">#222222</color>
     <color name="zhy_text_color_14">#657470</color>
+    <color name="zhy_text_color_15">#979797</color>
+    <color name="zhy_text_color_16">#353535</color>
     <color name="zhy_title_color_1">#3baf92</color>
     <color name="zhy_rb_check_1">#ededed</color>
     <color name="zhy_rb_check_transparent">#00ffffff</color>
