--- a/app/src/main/res/layout/view_head.xml
+++ b/app/src/main/res/layout/view_head.xml
@@ -5,7 +5,10 @@
     android:layout_height="@dimen/dimen_100dp"
     android:background="@color/zhy_text_color_1"
     android:orientation="horizontal"
-    android:padding="@dimen/dimen_20dp">
+    android:paddingLeft="@dimen/dimen_20dp"
+    android:paddingRight="@dimen/dimen_20dp"
+
+ >
 
     <!--<ImageView-->
     <!--android:id="@+id/logo"-->
@@ -32,7 +35,7 @@
         android:layout_gravity="center"
         android:background="@drawable/zhy_user_icon"
         android:textColor="@color/white"
-        android:textSize="@dimen/dimen_40dp" />
+        android:scaleType="fitCenter" />
 
     <TextView
         android:id="@+id/title_location"
@@ -69,6 +72,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_marginRight="5dp"
+        android:layout_marginTop="@dimen/dimen_20dp"
         android:background="@drawable/ic_new_message" />
 
     <!--<TextView-->
