--- a/app/src/main/res/layout/view_userinfo_layout.xml
+++ b/app/src/main/res/layout/view_userinfo_layout.xml
@@ -224,7 +224,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/dimen_16dp"
-                android:text="服务单"
+                android:text="优惠劵"
                 android:textColor="@color/dimgray"
                 android:textSize="@dimen/dimen_24dp" />
 
